content/manual/v8.0/source/includes/changelogs/releases/7.0.31.rst
.. _7.0.31-changelog:

7.0.31 Changelog
----------------

Query
~~~~~

- :issue:`SERVER-95374` Compound wildcard indexes can incorrectly push
  down predicates during union or planning
- :issue:`SERVER-113319` $match pushdown past a renamed field is done
  incorrectly when the expression root is a renamed field path
  expression

Schema
~~~~~~

:issue:`WT-14140` Unnecessary schema lock taken for active "file:"
dhandles that are not swept

Storage
~~~~~~~

- :issue:`SERVER-108699` Check BSON size in collection validation
- :issue:`WT-12349` Fix __wt_modify_reconstruct_from_upd_list behaviour
  with read-uncommitted snapshot
- :issue:`WT-12535` Optimize time spent in __wt_update_obsolete_check()
- :issue:`WT-15803` Fix ref not unlocked in error cases

WiredTiger
``````````

- :issue:`WT-13612` Time aggregate merge logic incorrect for chunk
  merge, page split scenario
- :issue:`WT-13627` Assertion failed: 'ts == 1 || ts == 0'. out-of-order
  timestamp update detected
- :issue:`WT-14273` Report a stat for how long it's been since a page
  was last queued for eviction
- :issue:`WT-14843` Add stats to track eviction pages seen and queued

Internals
~~~~~~~~~

- :issue:`SERVER-55068` Max incoming connections currently set to 80% of
  max open files, but each connection consumes 2 file descriptors
- :issue:`SERVER-60823` runCommandWithRetries in JS test framework
  exceeds JS interpreter recursion limit
- :issue:`SERVER-78241` Truncated log line shows number of remaining
  strings instead of truncated strings
- :issue:`SERVER-82688` mongod crash, bug fix when connections >
  wiredtiger's session_max
- :issue:`SERVER-86278` Investigate discrepancy between ShardLocal and
  ShardRemote aggregations
- :issue:`SERVER-88234` Fix write concern metrics tests
- :issue:`SERVER-89870` Rate limit JWKManager::getValidator
- :issue:`SERVER-91045` Load JWKs immediately at startup regardless of
  JWKSMinimumQuiescePeriodSecs
- :issue:`SERVER-91503` Improve NoSuchTransaction error message for
  transactions
- :issue:`SERVER-93154` Emit abortIndexBuild change event
- :issue:`SERVER-93560` Avoid hot-path logging in txn override
- :issue:`SERVER-96103` Fix argument quoting in Windows shell
  ProgramRunner
- :issue:`SERVER-99623` High CPU usage in range deleter service
- :issue:`SERVER-101491` Quiesce in JWKFetcherImpl when remote returns
  5xx error
- :issue:`SERVER-102927` evergreen/failed_unittests_gather.sh misses
  .debug symbol file due to earlier error in the script
- :issue:`SERVER-103148` Prevent writeConcernError from going out of
  scope in DBDirectClient helpers
- :issue:`SERVER-103774` Disallow compound wildcard indexes from being
  used as a shard key index
- :issue:`SERVER-104810` Support PS256 JWS Signing Algorithms for OIDC
- :issue:`SERVER-106194` CheckMetadataConsistency is not reading chunks
  with snapshot read concern
- :issue:`SERVER-106310` Add more logging to invariant failure when
  trying to set commit timestamp for transaction
- :issue:`SERVER-106360` Disable stacktrace symbolization for resmoke
  tasks by default
- :issue:`SERVER-106778` RSA_PSS_SALTLEN_DIGEST not supported in older
  OpenSSL
- :issue:`SERVER-107304` Make Pipeline::dispose() idempotent
- :issue:`SERVER-110442` Capture Information about index build durations
- :issue:`SERVER-110953` Check no orphaned document is present on a
  recipient shard before starting cloning a range
- :issue:`SERVER-112229` Backport gitignore for new auto_header tool
- :issue:`SERVER-112529` Temporarily disable external_data_source.js in
  concurrency_compute_mode
- :issue:`SERVER-113153` Make query multiversion fuzzers on LTS versions
  deterministic
- :issue:`SERVER-113431` Pin copybara to a specific tag
- :issue:`SERVER-113545` Wait for lastCommittedOpTime to be initialized
  after restart in api_version_prepare_txn.js
- :issue:`SERVER-113700` Update copybara to v20251110
- :issue:`SERVER-114017` move_primary_setFCV.js test creates database at
  latest FCV instead of downgraded FCV
- :issue:`SERVER-114337` Index build lastCommittedMillis should be int64
- :issue:`SERVER-114363` Capture index build blocking replication
  metrics
- :issue:`SERVER-114867` Define RSA_PSS_SALTLEN_DIGEST if not defined by
  OpenSSL
- :issue:`SERVER-115398` Differentiate between steady-state replication
  and startup recovery for lastTimeBetweenCommitOplogAndCommitMillis
- :issue:`SERVER-115917` Set specific Visual Studio and MSVC install
  version
- :issue:`SERVER-115962` Balancer does not make progress when the most
  loaded shard is already balanced within its zones
- :issue:`SERVER-118428` mongocryptd rejects large messages
- :issue:`SERVER-118713` [v7.0.30] Can not create timeseries 2dsphere
  index with a non-system user
- :issue:`SERVER-119396` Adjust maximum buffer size for ingress network
  messages
- :issue:`WT-11529` Stop allowing checkpoint cursors to attempt eviction
- :issue:`WT-13746` Conflict between RTS and eviction regarding
  btree->rec_max_timestamp (take 2)
- :issue:`WT-15251` Skip test_sweep04 on 8.0

